--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </div>
     <div id="myOrders">
       <input type="button" id="ordersButton" value="Мои заказы" />
+      <input
+        type="button"
+        id="backButton"
+        value="Назад"
+        style="display: none"
+      />
       <div id="order-list"><div id="order-details"></div></div>
     </div>
     <div id="orderForm" style="display: none"></div>
